# DigitalImageProcess_cpp

./: CMakeLists.txt  README.md  main.cpp
intensity_transformations/: CMakeLists.txt  IntensityTrans.cpp  IntensityTrans.h
